src/main/kotlin/com/example/helloworld/global/error/ErrorResponse.kt
package com.example.helloworld.global.error


class ErrorResponse(errorCode: ErrorCode) {
    val msg: String
    val code: Int

    init {
        msg = errorCode.msg
        code = errorCode.code
    }
}